# To-do-Server

./: CMakeLists.txt  CMakePresets.json  README.md
To-doClient/: App.xaml  App.xaml.cs  BindableToDo.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  To-doClient.csproj  To-doClient.sln
To-doClient/scripts/: proto-gen.bat
To-doServer/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
To-doServer/genproto/: todo.grpc.pb.cc  todo.grpc.pb.h  todo.pb.cc  todo.pb.h
To-doServer/include/: Config.hpp  Logger.hpp  To-doServer.hpp  ToDo_Service.hpp
To-doServer/scripts/: proto-gen.bat  proto-gen.sh
To-doServer/src/: To-doServer.cpp  ToDo_Service.cpp
protos/: todo.proto
